typescript/checker/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode3-negative.ts.stderr
error: UndefinedSymbol {
    sym: Atom('eval' type=static),
    span: Span {
        lo: BytePos(
            0,
        ),
        hi: BytePos(
            4,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/StrictMode/parserStrictMode3-negative.ts:1:1
  |
1 | eval = 1;
  | ^^^^

